# space-invaders-c

./: CMakeLists.txt  README.md  build.sh  main.c
lib/: hitboxes.c  hitboxes.h  modifiers.c  modifiers.h  setup.c  setup.h  utils.c  utils.h
lib/game/effects/: effects.c  effects.h
lib/game/enemy/: enemy.c  enemy.h
lib/game/player/: player.c  player.h
lib/game/projectile/: projectile.c  projectile.h
lib/menu/: button.c  button.h  input.c  input.h
lib/screens/: screen_handler.c  screen_handler.h
